--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - images/
+  - assets/images/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -87,8 +87,8 @@ flutter:
   fonts:
     - family: Inter
       fonts:
-      - asset: assets/fonts/Inter-Regular.ttf
-      - asset: assets/fonts/Inter-Bold.ttf
+      - asset: assets/fonts/inter-Regular.ttf
+      - asset: assets/fonts/inter-Bold.ttf
         weight: 700
   #
   # For details regarding fonts from package dependencies,
