--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_svg: ^2.0.7
   image_picker: ^1.1.1
   firebase_storage: ^11.5.1
+  convert: ^3.1.2
   http: ^0.13.6
 
 dev_dependencies:
