--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: booksi
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -30,8 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+    
   cupertino_icons: ^1.0.8
   get:
   firebase_core: ^2.27.0
@@ -45,11 +44,12 @@ dependencies:
   firebase_storage: ^11.5.1
   convert: ^3.1.2
   http: ^0.13.6
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-    
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -86,9 +86,9 @@ flutter:
   fonts:
     - family: Inter
       fonts:
-      - asset: assets/fonts/inter-Regular.ttf
-      - asset: assets/fonts/inter-Bold.ttf
-        weight: 700
+        - asset: assets/fonts/inter-Regular.ttf
+        - asset: assets/fonts/inter-Bold.ttf
+          weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
