--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   http: ^0.13.6
   get_storage: ^2.1.1
   uuid: ^4.5.1
+  flutter_rating_bar: ^4.0.0
 
 dev_dependencies:
   flutter_test:
