--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   get:
   share_plus: ^7.0.0
+  path_provider: ^2.0.0
+  firebase_dynamic_links: ^5.0.0
   intl: ^0.18.0
   firebase_core: ^2.27.0
   firebase_auth: ^4.17.0
