--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   http: ^0.13.6
   get_storage: ^2.1.1
   uuid: ^4.5.1
+  flutter_chat_ui: ^2.9.0
+  flutter_chat_types: ^3.6.2
 
 dev_dependencies:
   flutter_test:
