--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,9 +54,8 @@ dependencies:
   flutter_chat_ui: ^2.9.0
   flutter_chat_types: ^3.6.2
   badges: ^3.0.3
-  flutter_paymob: 
-  webview_flutter: ^4.9.0
-  webview_flutter_android: ^4.9.1
+  flutter_paymob:
+  flutter_dotenv:
 
 dev_dependencies:
   flutter_test:
@@ -78,6 +77,7 @@ flutter:
 
   assets:
     - assets/images/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
